# Metis

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/agents/: metis-dispatcher.md
docs/: ARCHITECTURE.md  DESIGN.md  DISPATCHER.md  PATTERNS.md  ai-ready-architecture.md  nellie-integration.md
docs/adr/: 001-sqlite-as-message-bus.md  002-sync-enqueue-async-wait.md  003-mcp-async-tasks-alignment.md  004-langchain-bridge-scope.md
examples/: simulate_dispatcher.py
examples/deepagents-dispatcher/: README.md  dispatcher.py
examples/http_multiuser/: README.md  server.py  test_http_e2e.py  test_isolation.py
examples/integration/: README.md  server.py
examples/live/: README.md  dispatcher_prompt.md  enqueue_tasks.py
examples/simulated/: README.md  dispatcher.py
examples/toy_server/: server.py
src/metis/: __init__.py
tests/: conftest.py
tests/application/: test_cancel_task.py  test_check_health.py  test_elicitation_roundtrip.py  test_enqueue_task.py  test_poll_deliver.py  test_provide_input.py  test_report_progress.py  test_roundtrip.py  test_sampling_fallback.py  test_wait_for_result.py
tests/domain/: test_errors.py  test_spec_mapping.py  test_task.py  test_value_objects.py
tests/infrastructure/: test_database.py  test_sqlite_heartbeat_store.py  test_sqlite_progress_store.py  test_sqlite_task_store.py  test_task_queue_facade.py
tests/langchain/: test_message_conversion.py  test_sampling_chat_model.py
tests/presentation/: test_trigger_server.py  test_trigger_tools.py  test_worker_server.py  test_worker_tools.py
(+27 files in other folders)
