[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metis"
version = "0.1.0"
description = "Intelligence-on-demand library for MCP servers"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
worker = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mcp[cli]>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
